k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: swiggy-deploy
  name: swiggy-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: swiggy-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: swiggy-deploy
    spec:
      containers:
      - image: yuvrajdocker001/swiggy-clone:latest
        name: swiggy
        ports:
        - containerPort: 3000
        resources: {}
status: {}
