k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-wildcard-host
  namespace: webapps
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: "sendevops.store"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: swiggy-svc
            port:
              number: 80
